# onnx-mcp

./: .gitignore  README.md  pyproject.toml  test_model.onnx
src/onnx_mcp_server/: __init__.py  server.py
