[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onnx-mcp-server"
version = "0.1.0"
description = "MCP server for inspecting ONNX model metadata and graph structure"
# readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "onnx>=1.14.0",
    "numpy>=1.24.0",
]

[project.scripts]
onnx-mcp-server = "onnx_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onnx_mcp_server"]
